# junior

./: .env.example  .flake8  .gitignore  .isort.cfg  .travis.yml  LICENSE  Makefile  Procfile  README.md  app.py  docker-compose-dev.yml  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.txt  settings.py  setup.cfg  vue.config.js
app/: views.py
base/: main.py
config/: gunicorn.py  nginx.conf.erb
docker/: readme.md
docker/app/: Dockerfile  entrypoint.sh  gunicorn.ini
docker/nginx/: Dockerfile  nginx.conf
fixtures/: bars-data.yml  bars-questions.yml  chapters-questions.yml  minimum-questions.yml  testcases.yml
frontend/: .eslintrc  README.md  package.json  vue.config.js
frontend/css/: style.css
frontend/public/: index.html
frontend/src/: app.js  avatarRandomizer.js  stateSorage.js  testCase.vue
migrations/: env.py
migrations/versions/: 0124d69ded12_.py  216128ca7f79_add_github_id.py  22cd0b59ef9c_.py  243b8fdb2de9_.py  253297d1ec2a_.py  385007b560d3_.py  3d23d2b6fb70_.py  508843369a49_.py  5afc9ef5fd7c_.py  6260d062e7b6_.py  79c8b1e6f21c_data_migration.py  79c8b1e6f21d_.py  7d4c03490569_.py  818fb50521d3_.py  837a82783686_.py  93f05913ed5c_.py  (+13 more)
scripts/: check_freeze.py
src/: admin_forms.py  commands.py  db_manage.py  extensions.py  main.py  settings.py  settings_oauth.py  uttils.py  views.py
static/: vue.config.js
templates/: app.html  index.html  index.jinja2
tests/: auth_test.py  base.py  factories.py  main_page_test.py  mocks.py  qa_test.py  test_testcase.py  test_utils.py  test_uttils.py
user/: models.py  views.py
(+82 files in other folders)
